--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,13 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:padding="10dp"
     android:orientation="vertical"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    android:id="@+id/fragmentContainer">
 
+<!--
     <TextView
         android:text="Username"
         android:layout_width="wrap_content"
@@ -26,12 +29,12 @@
         android:layout_height="wrap_content" />
 
     <TextView
-        android:text="Age"
+        android:text="Student ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <EditText
-        android:id="@+id/etAge"
+        android:id="@+id/etStudentID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -42,4 +45,6 @@
         android:layout_width="match_parent"
         android:text="Logout"
         android:layout_height="wrap_content" />
-</LinearLayout>
+        -->
+
+</FrameLayout>
