--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
-        android:text="Age"
+        android:text="Student ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
