Text boxes are persistent when keyboard appears

--- a/app/src/main/res/layout/tab_fragment_1.xml
+++ b/app/src/main/res/layout/tab_fragment_1.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:windowSoftInputMode="adjustPan" >
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,12 +13,11 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="68dp"
         android:inputType="textMultiLine"
         android:ems="10"
         android:id="@+id/tutorMessageInput"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.44" />
+        android:layout_gravity="center_horizontal" />
 
     <Button
         android:layout_width="305dp"
