--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:padding="10dp"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
 
     <TextView
@@ -45,15 +46,12 @@
         android:text="Register Here"
         android:textStyle="bold" />
 
-    <TextView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Tutor On The Fly\n(Placeholder Art)"
-        android:id="@+id/textView"
+        android:id="@+id/imageView"
         android:layout_gravity="center_horizontal"
-        android:gravity="center_vertical|center_horizontal"
-        android:textColor="#00FF00"
-        android:textSize="40sp"/>
+        android:layout_weight="0.96"
+        android:src="@drawable/logo" />
 
 </LinearLayout>
