--- a/app/src/main/res/layout/tab_fragment_1.xml
+++ b/app/src/main/res/layout/tab_fragment_1.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
-    android:windowSoftInputMode="adjustPan" >
+    android:windowSoftInputMode="adjustPan">
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,7 +18,8 @@
         android:inputType="textMultiLine"
         android:ems="10"
         android:id="@+id/tutorMessageInput"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/back"/>
 
     <Button
         android:layout_width="305dp"
@@ -29,9 +31,11 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="327dp"
+        android:layout_height="match_parent"
         android:id="@+id/listView"
+        android:layout_gravity="center_horizontal"
         android:choiceMode="multipleChoice"
-        android:layout_weight="0.53" />
+        android:visibility="visible"
+        android:touchscreenBlocksFocus="true" />
 
 </LinearLayout>
