--- a/app/src/main/res/layout/tab_fragment_1.xml
+++ b/app/src/main/res/layout/tab_fragment_1.xml
@@ -23,12 +23,17 @@
         android:background="@drawable/back"/>
 
     <Button
-        android:layout_width="305dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Post Message"
         android:id="@+id/btnPostMessage"
-        android:layout_gravity="center_horizontal"
         android:clickable="false" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sync Messages"
+        android:id="@+id/btnSyncMessage" />
 
     <ListView
         android:layout_width="match_parent"
