--- a/app/src/main/res/layout/tab_fragment_3.xml
+++ b/app/src/main/res/layout/tab_fragment_3.xml
@@ -16,7 +16,7 @@
         android:layout_height="0dp"
         android:layout_gravity="top"
         android:layout_weight="1"
-        class="com.google.android.gms.maps.SupportMapFragment"/>
+        class="com.google.android.gms.maps.MapFragment"/>
 
    <!-- <ListView
         android:layout_width="match_parent"
