--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,10 @@
     android:padding="10dp"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:windowSoftInputMode="stateHidden|adjustResize"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
 
     <TextView
@@ -17,7 +20,8 @@
         android:id="@+id/etUsername"
         android:layout_width="match_parent"
         android:layout_marginBottom="10dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:singleLine="true"/>
 
     <LinearLayout
         android:orientation="vertical"
