--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,10 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:id="@+id/fragmentContainer">
+    android:id="@+id/fragmentContainer"
+    android:windowSoftInputMode="stateHidden|adjustResize"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
 <!--
     <TextView
