--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,10 @@
     android:padding="10dp"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:windowSoftInputMode="stateHidden|adjustResize"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
 
     <TextView
