--- a/app/src/main/res/layout/help_board_item.xml
+++ b/app/src/main/res/layout/help_board_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="#6e091433"
-    android:clickable="true">
+    android:clickable="false">
 
     <LinearLayout
         android:layout_width="wrap_content"
