--- a/app/src/main/res/layout/tab_fragment_1.xml
+++ b/app/src/main/res/layout/tab_fragment_1.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:weightSum="1"
     android:id="@+id/tab1Frag"
-    android:windowSoftInputMode="adjustPan">
+    android:windowSoftInputMode="stateHidden|adjustResize">
+
+<!--android:windowSoftInputMode="adjustPan" -->
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,9 +42,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listView"
-        android:layout_gravity="center_horizontal"
         android:choiceMode="multipleChoice"
         android:visibility="visible"
-        android:touchscreenBlocksFocus="true" />
+        android:touchscreenBlocksFocus="false"
+        android:footerDividersEnabled="false"
+        android:layout_marginRight="7dp"
+        android:layout_marginLeft="7dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:stackFromBottom="false"
+        android:transcriptMode="disabled"
+        android:foregroundGravity="bottom"
+        android:headerDividersEnabled="false"
+        android:nestedScrollingEnabled="false"
+        android:layout_gravity="top" />
 
 </LinearLayout>
