*set reply message layout

--- a/app/src/main/res/layout/help_board_item.xml
+++ b/app/src/main/res/layout/help_board_item.xml
@@ -30,7 +30,6 @@
                 android:id="@+id/user_name_txt"
                 android:layout_marginLeft="10dp"
                 android:textSize="20dp"
-                android:layout_marginTop="5dp"
                 android:textColor="@color/secondary_text_default_material_dark"
                 android:textStyle="bold"
                 android:layout_above="@+id/post_date_init_txt" />
@@ -60,10 +59,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="What is the meaning of life and why should we go on living?"
         android:id="@+id/message_content_txt"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="15dp"
         android:textColor="#ffd04f"
         android:textStyle="bold"
-        android:textSize="20dp" />
+        android:textSize="15dp"
+        android:layout_marginRight="15dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -71,17 +71,20 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="#TAG1 #TAG2 #TAG3"
         android:id="@+id/message_hashtag_txt"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="15dp"
         android:textColor="@android:color/holo_blue_bright"
         android:textStyle="bold"
-        android:textSize="17dp"
-        android:layout_marginTop="4dp" />
+        android:textSize="15dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="15dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="7dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="7dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
 
         <ImageView
             android:layout_width="20dp"
@@ -90,7 +93,7 @@
             android:src="@drawable/comment"
             android:layout_alignParentRight="false"
             android:layout_toLeftOf="@+id/comment_count_txt"
-            android:layout_marginRight="2dp"
+            android:layout_marginRight="4dp"
             android:layout_alignTop="@+id/comment_count_txt"
             android:layout_alignBottom="@+id/comment_count_txt" />
 
@@ -112,7 +115,7 @@
             android:layout_alignParentRight="false"
             android:layout_alignTop="@+id/comment_count_txt"
             android:layout_toLeftOf="@+id/like_count_txt"
-            android:layout_marginRight="2dp"
+            android:layout_marginRight="4dp"
             android:src="@drawable/like"
             android:layout_alignBottom="@+id/like_count_txt" />
 
