--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,11 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:padding="10dp"
+    android:layout_width="fill_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     android:weightSum="1"
-    android:windowSoftInputMode="stateHidden|adjustResize"
+    android:windowSoftInputMode="stateVisible|adjustResize"
     android:focusable="true"
     android:focusableInTouchMode="true">
 
@@ -13,80 +12,215 @@
     <TextView
         android:text="Name (First)"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="true"
+        android:textSize="20dp"
+        android:textColor="@color/wallet_holo_blue_light"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/fnmae_txt"
+        android:textStyle="bold"
+        android:layout_marginTop="40dp" />
 
     <EditText
         android:id="@+id/etNameFirst"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/back"
+        android:singleLine="true"
+        android:textSize="20dp"
+        android:layout_below="@+id/fnmae_txt"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:layout_height="wrap_content" />
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" />
 
     <TextView
         android:text="Name (Last)"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp"
+        android:textColor="@color/wallet_holo_blue_light"
+        android:layout_below="@+id/etNameFirst"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/etNameLast"
         android:layout_width="match_parent"
-        android:layout_marginBottom="10dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="right" />
+        android:layout_gravity="right"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/textView"
+        android:singleLine="true"
+        android:textSize="20dp"
+        android:background="@drawable/back"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" />
 
     <TextView
         android:text="Email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2" />
+        android:id="@+id/textView2"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp"
+        android:textColor="@color/wallet_holo_blue_light"
+        android:layout_below="@+id/etNameLast"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
-        android:layout_marginBottom="10dp"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/textView2"
+        android:singleLine="true"
+        android:textSize="20dp"
+        android:background="@drawable/back"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" />
 
     <TextView
         android:text="ID Number"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp"
+        android:textColor="@color/wallet_holo_blue_light"
+        android:layout_below="@+id/etEmail"
+        android:id="@+id/textView5"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/etID"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:textSize="20dp"
+        android:background="@drawable/back"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView5"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:layout_height="wrap_content" />
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" />
 
     <TextView
         android:text="Username"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp"
+        android:textColor="@color/wallet_holo_blue_light"
+        android:layout_below="@+id/etID"
+        android:id="@+id/username_txt"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/etUsername"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:textSize="20dp"
+        android:background="@drawable/back"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false"
+        android:layout_below="@+id/username_txt"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:layout_height="wrap_content" />
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" />
 
     <TextView
         android:text="Password"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp"
+        android:textColor="@color/wallet_holo_blue_light"
+        android:layout_below="@+id/etUsername"
+        android:id="@+id/password_txt"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:inputType="textPassword"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:textSize="20dp"
+        android:background="@drawable/back"
+        android:layout_below="@+id/password_txt"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:layout_height="wrap_content" />
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" />
 
     <Button
         android:id="@+id/bRegister"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="Submit"
         android:layout_weight="0.04"
-        android:textSize="40dp" />
+        android:textSize="25dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/etPassword"
+        style="@style/Widget.AppCompat.Button"
+        android:textStyle="bold"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:layout_marginTop="20dp" />
 
-</LinearLayout>
+</RelativeLayout>
