--- a/app/src/main/res/drawable/back.xml
+++ b/app/src/main/res/drawable/back.xml
@@ -3,6 +3,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <solid android:color="#eff5ff" />
-    <stroke android:width="5dp"
-        android:color="#17191b"/>
+    <stroke android:width="4dp"
+        android:color="#ccc" />
 </shape>
