--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,7 +106,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/lopo_img"
         android:layout_below="@+id/tvRegisterLink"
-        android:src="@drawable/logo"
+        android:src="@drawable/cboklogo"
         android:padding="20dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
