--- a/app/src/main/res/layout/help_board_item.xml
+++ b/app/src/main/res/layout/help_board_item.xml
@@ -60,7 +60,7 @@
         android:text="What is the meaning of life and why should we go on living?"
         android:id="@+id/message_content_txt"
         android:layout_marginLeft="15dp"
-        android:textColor="#ffd04f"
+        android:textColor="#000000"
         android:textStyle="bold"
         android:textSize="15dp"
         android:layout_marginRight="15dp" />
@@ -115,7 +115,7 @@
             android:layout_alignTop="@+id/comment_count_txt"
             android:layout_toLeftOf="@+id/like_count_txt"
             android:layout_marginRight="4dp"
-            android:src="@drawable/like"
+            android:src="@drawable/likeit"
             android:layout_alignBottom="@+id/like_count_txt" />
 
         <TextView
