--- a/app/src/main/res/layout/tab_fragment_1.xml
+++ b/app/src/main/res/layout/tab_fragment_1.xml
@@ -19,7 +19,7 @@
         android:id="@+id/tutorMessageInput"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/back"
-        android:textColor="#ffbf36"
+        android:textColor="#000000"
         android:hint="Message Text..."
         android:textSize="20dp"
         android:singleLine="true"
