--- a/app/src/main/res/layout/activity_geofence.xml
+++ b/app/src/main/res/layout/activity_geofence.xml
@@ -10,9 +10,9 @@
     tools:context="com.tonikamitv.loginregister.GeofenceActivity">
 
     <com.google.android.gms.maps.MapView
-        android:id="@+id/map"
+        android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="com.google.android.gms.maps.MapFragment" />
+        class="com.google.android.gms.maps.SupportMapFragment" />
 
 </RelativeLayout>
